tests/instanceof/instanceof.exp
Error ------------------------------------------------------ instanceof.js:17:34

Error: instanceof.js:17
 17:     if (g instanceof X1) g.foo = '1337';  // oops
                                      ^^^^^^ Cannot assign `'1337'` to `g.foo` because string [1] is incompatible with number [2].
  References:
   17:     if (g instanceof X1) g.foo = '1337';  // oops
                                        ^^^^^^ [1]: string
    4: class X1 { foo: number; };
                       ^^^^^^ [2]: number

Error ------------------------------------------------------ instanceof.js:34:42

Error: instanceof.js:34
 34:     if (g.bar instanceof X1) g.bar.foo = '1337';  // oops
                                              ^^^^^^ Cannot assign `'1337'` to `g.bar.foo` because string [1] is incompatible with number [2].
  References:
   34:     if (g.bar instanceof X1) g.bar.foo = '1337';  // oops
                                                ^^^^^^ [1]: string
    4: class X1 { foo: number; };
                       ^^^^^^ [2]: number

Error ------------------------------------------------------ instanceof.js:51:50

Error: instanceof.js:51
 51:     if (g.baz.bar instanceof X1) g.baz.bar.foo = '1337';  // oops
                                                      ^^^^^^ Cannot assign `'1337'` to `g.baz.bar.foo` because string [1] is incompatible with number [2].
  References:
   51:     if (g.baz.bar instanceof X1) g.baz.bar.foo = '1337';  // oops
                                                        ^^^^^^ [1]: string
    4: class X1 { foo: number; };
                       ^^^^^^ [2]: number

Error ------------------------------------------------------- instanceof.js:83:5

Error: instanceof.js:83
 83:     x++; // error
         ^ Cannot perform arithmetic operation because array type [1] is not a number.
  References:
   81: function foo1(x: Array<number> | number) {
                        ^^^^^^^^^^^^^ [1]: array type

Error ------------------------------------------------------- instanceof.js:85:7

Error: instanceof.js:85
 85:     x[0] = 123; // error
           ^ Cannot assign `123` to `x[0]` because an indexer property is missing in number [1].
  References:
   81: function foo1(x: Array<number> | number) {
                                        ^^^^^^ [1]: number


Found 5 errors
